--- a/week1/helloworld-express/package.json
+++ b/week1/helloworld-express/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "consolidate": "^0.13.1",
+    "express": "^4.13.3",
+    "swig": "^1.4.2"
   }
 }
